# brewmeister-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
api/: Cargo.toml
api/src/: api.rs  config.rs  db.rs  main.rs  program.rs
api/src/devices/: brewslave.rs  mock.rs  mod.rs
api/src/sql/: create.sql
app/: Cargo.toml  index.html
app/assets/: style.scss
app/src/: main.rs
app/src/components/: header.rs  mod.rs  recipe.rs  recipes_list.rs  temperature.rs  text_input.rs  theme_switch.rs
app/src/pages/: home.rs  mod.rs  new_brew.rs  new_recipe.rs  not_found.rs  recipe.rs  recipes.rs
backend/: Cargo.toml
backend/src/: main.rs
comm/: Cargo.toml  README.md
comm/examples/: comm.rs
comm/src/: bin.rs  lib.rs
frontend/: Cargo.toml  README.md  index.html
frontend/src/: main.rs
models/: Cargo.toml
models/src/: lib.rs
