[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.3"
async-trait = "*"
clap = { version = "3", features = ["derive"] }
comm = { path = "../comm" }
log = "0"
env_logger = "0"
models = { path = "../models" }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower = "0"
tower-http = { version = "0.1.1", features = ["cors"] }
tracing = "0"
