[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.4", features = ["headers"] }
async-trait = "*"
clap = { version = "3", features = ["derive"] }
comm = { path = "../comm" }
dotenv = "0"
log = "0"
futures = "0"
hyper = { version = "*", default-features = false }
include_dir = "0"
models = { path = "../models" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono" ] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0"
tower = "0"
tower-http = { version = "0", features = ["cors"] }
tracing = "0"
tracing-subscriber = "0"
