[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7" }
axum-extra = { version = "0.9", features = ["typed-header", "typed-routing"] }
clap = { version = "4", features = ["derive"] }
comm = { path = "../comm" }
futures = "0"
http = "1"
include_dir = "0"
log = "0"
models = { path = "../models" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono" ] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0"
tower = "0"
tower-http = { version = "0.5", features = ["compression-gzip", "compression-deflate", "cors", "trace"] }
tracing = "0"
tracing-subscriber = "0"
