[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.3"
comm = { path = "../comm" }
log = "0"
env_logger = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower = "0"
tower-http = { version = "0.1.1", features = ["cors"] }
tracing = "0"
