[package]
name = "comm"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1"
async-trait = "0"
byteorder = "1"
env_logger = "0"
indicatif = "0"
rand = "0"
serialport = "4"
structopt = "0"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5"

[lib]
name = "comm"
path = "src/lib.rs"

[[bin]]
name = "comm"
path = "src/bin.rs"
