[package]
name = "comm"
version = "0.1.0"
edition = "2018"

[dependencies]
async-trait = "0"
byteorder = "1"
serialport = "4"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5"

[dev-dependencies]
anyhow = "1"
env_logger = "0"
indicatif = "0"
rand = "0"
structopt = "0"

[lib]
name = "comm"
path = "src/lib.rs"

[[example]]
name = "comm"
