[package]
name = "comm"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0"
byteorder = "1"
serialport = { version = "4", default-features = false }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5"

[dev-dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
env_logger = "0"
indicatif = "0"
rand = "0"

[lib]
name = "comm"
path = "src/lib.rs"

[[example]]
name = "comm"
